force-app/main/default/objects/Job_Cards__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule Next</fullName>
                <default>true</default>
                <label>Schedule Next</label>
            </value>
            <value>
                <fullName>Followup</fullName>
                <label>Follow Up Required</label>
            </value>
            <value>
                <fullName>Escalate - Management</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
                <label>In Action</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>