force-app/main/default/objects/Job_Cards__c/fields/Actionby__c.field-meta.xml
<CustomField>
    <fullName>Actionby__c</fullName>
    <label>Action By</label>
    <type>TextArea</type>
</CustomField>