force-app/main/default/objects/Job_Cards__c/fields/Active_Driver__c.field-meta.xml
<CustomField>
    <fullName>Active_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Driver</label>
    <referenceTo>Active_Driver__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>