force-app/main/default/objects/Job_Cards__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <formula>WD_Asset__r.Asset_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset ID#</label>
    <type>Text</type>
</CustomField>