force-app/main/default/objects/Job_Cards__c/fields/Asset_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_Record_ID__c</fullName>
    <formula>WD_Asset__r.Asset_Record_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Record ID</label>
    <type>Text</type>
</CustomField>