force-app/main/default/objects/Job_Cards__c/fields/Asset_Stacked__c.field-meta.xml
<CustomField>
    <fullName>Asset_Stacked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Stacked</label>
    <type>Checkbox</type>
</CustomField>