force-app/main/default/objects/Job_Cards__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <formula>WD_Asset__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset - Type</label>
    <type>Text</type>
</CustomField>