force-app/main/default/objects/Job_Cards__c/fields/Assigned_2__c.field-meta.xml
<CustomField>
    <fullName>Assigned_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned 2</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Work Orders (Mech 2)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>