force-app/main/default/objects/Job_Cards__c/fields/Assigned_3__c.field-meta.xml
<CustomField>
    <fullName>Assigned_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned 3</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Work Orders (Assigned 3)</relationshipLabel>
    <relationshipName>Work_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>