force-app/main/default/objects/Job_Cards__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <inlineHelpText>The Review Date must be 21 days from Date created for Normal, 14 days for Urgent and 7 days for NOT Roadworthy (vehicle can not be moved until fixed)  If these target dates are reached/passed you must provide a reason why in comments/progress report field</inlineHelpText>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>