force-app/main/default/objects/Job_Cards__c/fields/Attempted_Trouble_Shooting__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Trouble_Shooting__c</fullName>
    <inlineHelpText>Provide details of any attempt to repair/trouble shoot issue on site</inlineHelpText>
    <label>Attempted Trouble Shooting</label>
    <type>TextArea</type>
</CustomField>