force-app/main/default/objects/Job_Cards__c/fields/Bay_Field__c.field-meta.xml
<CustomField>
    <fullName>Bay_Field__c</fullName>
    <label>Workshop Bay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1A - Transport Bay</fullName>
            </value>
            <value>
                <fullName>1B - Transport Bay</fullName>
            </value>
            <value>
                <fullName>2 - Mech Bay</fullName>
            </value>
            <value>
                <fullName>3 - Mech Bay</fullName>
            </value>
            <value>
                <fullName>4 - Fab Bay</fullName>
            </value>
            <value>
                <fullName>5 - Fab Bay</fullName>
            </value>
            <value>
                <fullName>TBA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>