force-app/main/default/objects/Job_Cards__c/fields/Been_Printed__c.field-meta.xml
<CustomField>
    <fullName>Been_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A paper copy has been printed to hand to assigned person</inlineHelpText>
    <label>Been Printed?</label>
    <type>Checkbox</type>
</CustomField>