force-app/main/default/objects/Job_Cards__c/fields/Category_of_Work_Task__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Work_Task__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioning</fullName>
                <label>Air Conditioning/Ice Pack</label>
            </value>
            <value>
                <fullName>Air System</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Camp Maintenance</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Electrical General</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
                <label>Engine/Gearbox/Driveline</label>
            </value>
            <value>
                <fullName>Fabricate</fullName>
            </value>
            <value>
                <fullName>Fit Out/Assemble</fullName>
            </value>
            <value>
                <fullName>Fuel/Water Tank</fullName>
            </value>
            <value>
                <fullName>Guardian/Geotab</fullName>
            </value>
            <value>
                <fullName>Hub Metre</fullName>
            </value>
            <value>
                <fullName>Hubs</fullName>
            </value>
            <value>
                <fullName>Hydraulics</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
                <label>Lights/Gauges/Auto Elec</label>
            </value>
            <value>
                <fullName>Managed Item</fullName>
            </value>
            <value>
                <fullName>Oilfield Equipment</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Cab Panels</fullName>
                <label>Panels/Guards/Doors/Bonnet</label>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
            <value>
                <fullName>Radiator</fullName>
            </value>
            <value>
                <fullName>Rims</fullName>
            </value>
            <value>
                <fullName>Signage</fullName>
            </value>
            <value>
                <fullName>Steering</fullName>
            </value>
            <value>
                <fullName>Structure/Welding Repair</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Trays/Side Boxes/Tool Boxes</fullName>
            </value>
            <value>
                <fullName>Turntable</fullName>
                <label>Turntable/Ring Feeder/King Pin/Dolly Pull</label>
            </value>
            <value>
                <fullName>Tyres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>