force-app/main/default/objects/Job_Cards__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project - Build Phase</fullName>
            </value>
            <value>
                <fullName>Project - Paint</fullName>
            </value>
            <value>
                <fullName>Project - Fit Out</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <default>true</default>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Breakdown - Urgent</fullName>
            </value>
            <value>
                <fullName>Damages - Incident</fullName>
            </value>
            <value>
                <fullName>New Asset - Build</fullName>
                <isActive>false</isActive>
                <label>New Asset - Build</label>
            </value>
            <value>
                <fullName>Refurb</fullName>
                <isActive>false</isActive>
                <label>Refurb</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>