force-app/main/default/objects/Job_Cards__c/fields/Comments_Progressreport__c.field-meta.xml
<CustomField>
    <fullName>Comments_Progressreport__c</fullName>
    <inlineHelpText>Add any relevant information in relation to the Work Order</inlineHelpText>
    <label>Completion/Progress Report</label>
    <type>TextArea</type>
</CustomField>