force-app/main/default/objects/Job_Cards__c/fields/Conga_Template_to_use__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_to_use__c</fullName>
    <description>This Formula tells the print button which document to print.</description>
    <formula>IF(RecordTypeId = &quot;01290000000GjVk&quot;, &quot;a0j900000006Yni&quot;,
IF(RecordTypeId = &quot;01290000000GlHo&quot;, &quot;a0j900000006Yni&quot;,
IF(RecordTypeId = &quot;01290000000GkFa&quot;, &quot;a0j900000006Yni&quot;,
IF(RecordTypeId = &quot;01290000000hfHc&quot;, &quot;a0j90000006vqIM&quot;,
IF(RecordTypeId = &quot;01290000000hurS&quot;, &quot;a0j90000006vqIM&quot;,
IF(RecordTypeId = &quot;01290000000hqdx&quot;, &quot;a0j90000006vqIM&quot;,
IF(RecordTypeId = &quot;01290000000hudi&quot;, &quot;a0j90000006vqIM&quot;,
IF(RecordTypeId = &quot;01290000000hqd9&quot;, &quot;a0j90000006vqIM&quot;,
&quot;a0j900000006y5r&quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Template to use</label>
    <type>Text</type>
</CustomField>