force-app/main/default/objects/Job_Cards__c/fields/Daily_Site_Job__c.field-meta.xml
<CustomField>
    <fullName>Daily_Site_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Site Job</label>
    <referenceTo>Daily_Report__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>