force-app/main/default/objects/Job_Cards__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <inlineHelpText>The Date that the manager would expect work order to be finalised</inlineHelpText>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>