force-app/main/default/objects/Job_Cards__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <inlineHelpText>Date that Work Order was created</inlineHelpText>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>