force-app/main/default/objects/Job_Cards__c/fields/Date_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Service__c</fullName>
    <inlineHelpText>Date Started Work Order</inlineHelpText>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>