force-app/main/default/objects/Job_Cards__c/fields/Deffered__c.field-meta.xml
<CustomField>
    <fullName>Deffered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who authorised the deferral.</description>
    <label>Deferred by</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Work Orders (Deferred by)</relationshipLabel>
    <relationshipName>Work_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>