force-app/main/default/objects/Job_Cards__c/fields/Description_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Change__c</fullName>
    <inlineHelpText>Provide detailed description of what you would like changed</inlineHelpText>
    <label>Description of Change</label>
    <type>TextArea</type>
</CustomField>