force-app/main/default/objects/Job_Cards__c/fields/Details_of_Issue_Work_Requested__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Issue_Work_Requested__c</fullName>
    <inlineHelpText>Provide detailed information about the issue you are facing and the repairs you require to be completed</inlineHelpText>
    <label>Details of Issue/Work Requested</label>
    <type>TextArea</type>
</CustomField>