force-app/main/default/objects/Job_Cards__c/fields/Details_of_Work_Carried_Out__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Work_Carried_Out__c</fullName>
    <label>Details of Work Carried Out</label>
    <type>TextArea</type>
</CustomField>