force-app/main/default/objects/Job_Cards__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Actual Date that Work Order was Completed by Assigned person</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>