force-app/main/default/objects/Job_Cards__c/fields/Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Engine_Hours__c</fullName>
    <inlineHelpText>Engine Hours (on the Asset) at the time the Service is auto created</inlineHelpText>
    <label>Engine Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>