force-app/main/default/objects/Job_Cards__c/fields/Engine_Hrs_Current__c.field-meta.xml
<CustomField>
    <fullName>Engine_Hrs_Current__c</fullName>
    <description>Engine Hrs (On the Asset) Current</description>
    <formula>WD_Asset__r.Engine_Hours__c</formula>
    <inlineHelpText>Engine Hrs (On the Asset) Current</inlineHelpText>
    <label>Engine Hrs (Current)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>