force-app/main/default/objects/Job_Cards__c/fields/Equipment_Failure__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please tick if the asset has broken down or if safety critical item has expired certificate</inlineHelpText>
    <label>Equipment Failure</label>
    <type>Checkbox</type>
</CustomField>