force-app/main/default/objects/Job_Cards__c/fields/Fault_Repair__c.field-meta.xml
<CustomField>
    <fullName>Fault_Repair__c</fullName>
    <inlineHelpText>This is the number of the Fault Repair Report from Truck Driver Book.</inlineHelpText>
    <label>Fault Repair #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>