force-app/main/default/objects/Job_Cards__c/fields/Fault_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Fault_Report_Type__c</fullName>
    <inlineHelpText>Maintenance - keeping something in proper condition
Equipment Failure - Equipment is no longer able to be used as it is unsafe or out of date (SCI)</inlineHelpText>
    <label>Fault Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Equipment Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>