force-app/main/default/objects/Job_Cards__c/fields/Follow_Up_Job_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Job_Required__c</fullName>
    <inlineHelpText>If you observed any other work tasks that are required but you have NOT STARTED then a Follow Up Job is Required.</inlineHelpText>
    <label>Follow Up Job Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>