force-app/main/default/objects/Job_Cards__c/fields/Follow_Up_Work_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Work_Tasks__c</fullName>
    <inlineHelpText>List any Work Tasks that are required, but NOT YET BEEN STARTED.  These Work Tasks must go onto a NEW WORK ORDER to be managed</inlineHelpText>
    <label>Follow Up Work Tasks</label>
    <type>TextArea</type>
</CustomField>