force-app/main/default/objects/Job_Cards__c/fields/Fully_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Fully_Dispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Dispatched</label>
    <type>Checkbox</type>
</CustomField>