force-app/main/default/objects/Job_Cards__c/fields/Hazard_Card__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Card__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>If a hazard Card has been created please provide the link</inlineHelpText>
    <label>Hazard Card #</label>
    <referenceTo>Hazard_Card__c</referenceTo>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>