force-app/main/default/objects/Job_Cards__c/fields/Is_this_a_MANAGED_ITEM__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_MANAGED_ITEM__c</fullName>
    <label>Is this a MANAGED ITEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>