force-app/main/default/objects/Job_Cards__c/fields/Isolated__c.field-meta.xml
<CustomField>
    <fullName>Isolated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the IsolEight 8 procedure has been followed eg Isolated, Locked or Tagged then this should be ticked</inlineHelpText>
    <label>Is the Asset Isolated</label>
    <type>Checkbox</type>
</CustomField>