force-app/main/default/objects/Job_Cards__c/fields/Isolation_Details__c.field-meta.xml
<CustomField>
    <fullName>Isolation_Details__c</fullName>
    <label>Isolation Details</label>
    <type>TextArea</type>
</CustomField>