force-app/main/default/objects/Job_Cards__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed Item ID #</label>
    <referenceTo>Inspection_Certification__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>