force-app/main/default/objects/Job_Cards__c/fields/Job_Reassigned_To__c.field-meta.xml
<CustomField>
    <fullName>Job_Reassigned_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Trades supervisor is responsible to manage his team to ensure the job is completed</inlineHelpText>
    <label>Assigned 1</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Work Orders (Job Assigned To)</relationshipLabel>
    <relationshipName>Job_Cards_Reassigned_To</relationshipName>
    <type>Lookup</type>
</CustomField>