force-app/main/default/objects/Job_Cards__c/fields/kms_at_time__c.field-meta.xml
<CustomField>
    <fullName>kms_at_time__c</fullName>
    <label>KMs/Hrs at Time of Repair</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>