force-app/main/default/objects/Job_Cards__c/fields/Managed_By__c.field-meta.xml
<CustomField>
    <fullName>Managed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managed By</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.FirstName</field>
            <operation>startsWith</operation>
            <value>Sam</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>