force-app/main/default/objects/Job_Cards__c/fields/Managed_By_DONT__c.field-meta.xml
<CustomField>
    <fullName>Managed_By_DONT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person who is responsible for ensuring that the work order is completed, by ensuring all Work Tasks have been completed and approved.</inlineHelpText>
    <label>Managed By DONT USE</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Work Orders (Managed By)</relationshipLabel>
    <relationshipName>Job_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>