force-app/main/default/objects/Job_Cards__c/fields/Managed_by_Viewing_User__c.field-meta.xml
<CustomField>
    <fullName>Managed_by_Viewing_User__c</fullName>
    <formula>$User.Id =  Managed_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managed by Viewing User</label>
    <type>Checkbox</type>
</CustomField>