force-app/main/default/objects/Job_Cards__c/fields/Managers_Response__c.field-meta.xml
<CustomField>
    <fullName>Managers_Response__c</fullName>
    <inlineHelpText>Provide feedback on why it is approved/declined</inlineHelpText>
    <label>Managers Response</label>
    <type>TextArea</type>
</CustomField>