force-app/main/default/objects/Job_Cards__c/fields/Manifest__c.field-meta.xml
<CustomField>
    <fullName>Manifest__c</fullName>
    <label>Manifest #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>