force-app/main/default/objects/Job_Cards__c/fields/NHVAS_Asset__c.field-meta.xml
<CustomField>
    <fullName>NHVAS_Asset__c</fullName>
    <formula>WD_Asset__r.NHVAS_Accredited__c</formula>
    <label>NHVAS Asset</label>
    <type>Checkbox</type>
</CustomField>