force-app/main/default/objects/Job_Cards__c/fields/Odometer__c.field-meta.xml
<CustomField>
    <fullName>Odometer__c</fullName>
    <inlineHelpText>Odometer (on the Asset) at the time the Service is auto created</inlineHelpText>
    <label>Odometer</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>