force-app/main/default/objects/Job_Cards__c/fields/Odometer_Current__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Current__c</fullName>
    <description>Odometer (on the Asset) current</description>
    <formula>WD_Asset__r.Current_Odometer_Reading__c</formula>
    <inlineHelpText>Odometer (on the Asset) current</inlineHelpText>
    <label>Odometer (Current)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>