force-app/main/default/objects/Job_Cards__c/fields/Other_Work_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Other_Work_Tasks__c</fullName>
    <inlineHelpText>Work tasks that were observed (other than the Assigned Tasks)  that were:
*COMPLETED
* STARTED BUT NOT COMPLETED
The Work Order CANNOT BE CLOSED UNTIL THESE WORK TASKS ARE ALL COMPLETED</inlineHelpText>
    <label>Other Work Tasks</label>
    <type>TextArea</type>
</CustomField>