force-app/main/default/objects/Job_Cards__c/fields/Parts_Consumables__c.field-meta.xml
<CustomField>
    <fullName>Parts_Consumables__c</fullName>
    <inlineHelpText>Please list all parts and consumables used on this job.</inlineHelpText>
    <label>Parts &amp; Consumables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>