force-app/main/default/objects/Job_Cards__c/fields/Parts_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Dispatch_Date__c</fullName>
    <label>Parts Dispatch Date</label>
    <type>Date</type>
</CustomField>