force-app/main/default/objects/Job_Cards__c/fields/Parts_Information__c.field-meta.xml
<CustomField>
    <fullName>Parts_Information__c</fullName>
    <label>Parts Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>