force-app/main/default/objects/Job_Cards__c/fields/Parts_notrequ__c.field-meta.xml
<CustomField>
    <fullName>Parts_notrequ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Not Required</label>
    <type>Checkbox</type>
</CustomField>