force-app/main/default/objects/Job_Cards__c/fields/Parts_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Parts_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Tick when all required parts have been ordered</inlineHelpText>
    <label>Parts Ordered</label>
    <type>Checkbox</type>
</CustomField>