force-app/main/default/objects/Job_Cards__c/fields/Parts_Received__c.field-meta.xml
<CustomField>
    <fullName>Parts_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Received in Stores</label>
    <type>Checkbox</type>
</CustomField>