force-app/main/default/objects/Job_Cards__c/fields/Parts_Received_in_Stores__c.field-meta.xml
<CustomField>
    <fullName>Parts_Received_in_Stores__c</fullName>
    <inlineHelpText>The person responsible for completing the work order must order the required parts on the PR board and update this list to Ordered and updated to Received once the parts are collected by the responsible person</inlineHelpText>
    <label>Parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Consult</fullName>
                <default>true</default>
                <label>Initial Consult</label>
            </value>
            <value>
                <fullName>From Stock</fullName>
                <label>From Stock/Not Required</label>
            </value>
            <value>
                <fullName>Parts to be Ordered</fullName>
            </value>
            <value>
                <fullName>WaitingonParts</fullName>
                <label>Waiting on Parts</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>PR Created</fullName>
                <isActive>false</isActive>
                <label>PR Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>