force-app/main/default/objects/Job_Cards__c/fields/Parts_Required__c.field-meta.xml
<CustomField>
    <fullName>Parts_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Required</label>
    <type>Checkbox</type>
</CustomField>