force-app/main/default/objects/Job_Cards__c/fields/PR__c.field-meta.xml
<CustomField>
    <fullName>PR__c</fullName>
    <label>PR #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>