force-app/main/default/objects/Job_Cards__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Normal (1-14 days)
Urgent (1-7 days)
Not Roadworthy (Do Not Use)</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Not Roadworthy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>