force-app/main/default/objects/Job_Cards__c/fields/Progress_Report__c.field-meta.xml
<CustomField>
    <fullName>Progress_Report__c</fullName>
    <label>Progress Report</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts to be Ordered</fullName>
                <default>true</default>
                <label>Parts to be Ordered</label>
            </value>
            <value>
                <fullName>Waiting on Parts</fullName>
            </value>
            <value>
                <fullName>Asset in Use</fullName>
            </value>
            <value>
                <fullName>Asset Stacked</fullName>
            </value>
            <value>
                <fullName>Monitoring Fault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>