force-app/main/default/objects/Job_Cards__c/fields/Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change__c</fullName>
    <inlineHelpText>Provide detailed description of why you would like the change to occur</inlineHelpText>
    <label>Reason for Change</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>