force-app/main/default/objects/Job_Cards__c/fields/Reason_for_Deferral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deferral__c</fullName>
    <description>Write the reason why a work order is being deferred or monitored instead of completed.</description>
    <inlineHelpText>Write the reason why a work order is being deferred or monitored instead of completed.</inlineHelpText>
    <label>Reason for Deferral</label>
    <type>TextArea</type>
</CustomField>