force-app/main/default/objects/Job_Cards__c/fields/Reason_Work_Tasks_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Reason_Work_Tasks_Incomplete__c</fullName>
    <inlineHelpText>May not be complete due to parts, extra problem found etc..</inlineHelpText>
    <label>Reason Work Tasks Incomplete</label>
    <type>TextArea</type>
</CustomField>