force-app/main/default/objects/Job_Cards__c/fields/Record_Count_Dollies__c.field-meta.xml
<CustomField>
    <fullName>Record_Count_Dollies__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Record Count Dollies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>