force-app/main/default/objects/Job_Cards__c/fields/Record_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Created_Date__c</fullName>
    <formula>Date_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Created Date</label>
    <type>Date</type>
</CustomField>