force-app/main/default/objects/Job_Cards__c/fields/Rego__c.field-meta.xml
<CustomField>
    <fullName>Rego__c</fullName>
    <formula>WD_Asset__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rego</label>
    <type>Text</type>
</CustomField>